# competetive-ai

./: .gitignore  Cargo.toml  README.md  setup.ds
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs  space_invaders.rs
frontend/static/: Sprites.ai
frontend/static/bootstrap-5.0.0-beta1-dist/js/: bootstrap.bundle.js  bootstrap.esm.js  bootstrap.js
server/: Cargo.toml
space-invaders/: Cargo.toml
space-invaders/src/: alien.rs  bullet.rs  bunker.rs  cannon.rs  lib.rs
